--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,9 +1,11 @@
 html {
   scroll-behavior: smooth;
+    display:flex;
 }
 
 body {
   font-family: Montserrat;
+
 }
 
 
@@ -15,6 +17,7 @@ article {
   align-items: center;
   font-size: 100px;
   background: #red;
+  font: normal normal 600 30px/43px Montserrat;
   h1{
 
   }
@@ -22,8 +25,5 @@ article {
 
 }
 article:nth-of-type(1n){
-    background: #6696E2;
-}
-pricing{
     background: #6696E2;
 }
